--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
-<!DOCTYPE html>
+<!DOCTYPE html5>
 <html lang="en">
     <head>
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Javascript Syntax Search</title>
-        <link rel="stylesheet" type="text/css" href="css/main.css">      
-        <link rel="icon" href="/images/ai.jpg" type="image/x-icon"/>
+        <link rel="stylesheet" type="text/css" href="./css/main.css">      
+        <link rel="icon" href="./images/ai.jpg" type="image/x-icon"/>
         
     </head>
 
@@ -16,11 +16,11 @@
                 <header>
                     <input type="search" id="search" placeholder="search">
                 </header>
-            <img class="animation" src="/images/bot.gif" alt="">
+            <img class="animation" src="./images/bot.gif" alt="">
             </aside>
             <main>
                 <header>
-                    <img src="/images/ai.jpg" alt="">
+                    <img src="./images/ai.jpg" alt="">
                     <div>
                         <h2>The Kori Search</h2>
                         <h3>With over 192 keywords</h3>
@@ -34,8 +34,8 @@
 
             </main>
         </div>
-        <script type="text/javascript" src="/js/kori.object.js"></script>
-        <script type="text/javascript" src="/js/data.js"></script>
+        <script type="text/javascript" src="./js/main.js"></script>
+        <script type="text/javascript" src="./js/data.js"></script>
     </body>
 </html>
 <!--
