--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <title>Javascript Syntax Search</title>
         <link rel="stylesheet" type="text/css" href="./css/main.css">      
         <link rel="icon" href="./images/ai.jpg" type="image/x-icon"/>
-        
+        <meta name="google-site-verification" content="A1wKq9NbZEBxx50HxG-d-5ZJSNfcHUSMwV7L65ljKu8" />
     </head>
 
     <body>
