--- a/index.html
+++ b/index.html
@@ -1,45 +1,38 @@
-<!DOCTYPE html5>
-<html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Javascript Syntax Search</title>
-        <link rel="stylesheet" type="text/css" href="./css/main.css">      
-        <link rel="icon" href="./images/ai.jpg" type="image/x-icon"/>
-        <meta name="google-site-verification" content="A1wKq9NbZEBxx50HxG-d-5ZJSNfcHUSMwV7L65ljKu8" />
-    </head>
+<!DOCTYPE html>
+<html>
 
-    <body>
-        <div id="container">
-            <aside>
-                <header>
-                    <input type="search" id="search" placeholder="search">
-                </header>
-            <img class="animation" src="./images/bot.gif" alt="">
-            </aside>
-            <main>
-                <header>
-                    <img src="./images/ai.jpg" alt="">
-                    <div>
-                        <h2>The Kori Search</h2>
-                        <h3>With over 192 keywords</h3>
-                    </div>
-                    <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/1940306/ico_star.png" alt="">
-                    
-                </header>
-                <ul id="chat">
-                  
-                </ul>
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Javascript Syntax Search</title>
+    <link rel="stylesheet" type="text/css" href="../css/main.css">
+    <link rel="icon" href="../images/ai.jpg" type="image/x-icon" />
+    <meta name="google-site-verification" content="A1wKq9NbZEBxx50HxG-d-5ZJSNfcHUSMwV7L65ljKu8" />
+    <script src="https://unpkg.com/react@17/umd/react.development.js" crossorigin></script>
+    <script src="https://unpkg.com/react-dom@17/umd/react-dom.development.js" crossorigin></script>
+    <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
+</head>
 
-            </main>
-        </div>
-        <script type="text/javascript" src="./js/main.js"></script>
-        <script type="text/javascript" src="./js/data.js"></script>
-    </body>
+<body>
+    <div id="container">
+        <aside>
+            <header>
+                <input type="search" id="search" placeholder="search">
+            </header>
+            <img class="animation" src="../images/bot.gif" alt="">
+        </aside>
+        <main >
+            <!--React component renders here-->
+            <div id="info"></div>
+            <div>
+                <ul id="chat"></ul>
+            </div>
+        </main>
+    </div>
+    <script type="text/javascript" src="../js/main.js"></script>
+    <script type="text/javascript" src="../js/data.js"></script>
+    <script type="text/babel" src="reactor.js"></script>
+</body>
+
 </html>
-<!--
-else if (data[val] == undefined) {
-                    renderNone()
-                }
--->
