--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Javascript Syntax Search</title>
-    <link rel="stylesheet" type="text/css" href="../css/main.css">
-    <link rel="icon" href="../images/ai.jpg" type="image/x-icon" />
+    <link rel="stylesheet" type="text/css" href="./css/main.css">
+    <link rel="icon" href="./images/ai.jpg" type="image/x-icon" />
     <meta name="google-site-verification" content="A1wKq9NbZEBxx50HxG-d-5ZJSNfcHUSMwV7L65ljKu8" />
     <script src="https://unpkg.com/react@17/umd/react.development.js" crossorigin></script>
     <script src="https://unpkg.com/react-dom@17/umd/react-dom.development.js" crossorigin></script>
@@ -20,18 +20,16 @@
             <header>
                 <input type="search" id="search" placeholder="search">
             </header>
-            <img class="animation" src="../images/bot.gif" alt="">
+            <img class="animation" src="./images/bot.gif" alt="">
         </aside>
         <main >
             <!--React component renders here-->
             <div id="info"></div>
-            <div>
-                <ul id="chat"></ul>
-            </div>
+            <div ><ul id="chat"></ul></div>
         </main>
     </div>
-    <script type="text/javascript" src="../js/main.js"></script>
-    <script type="text/javascript" src="../js/data.js"></script>
+    <script type="text/babel" src="./js/main.js"></script>
+    <script type="text/babel" src="./js/data.js"></script>
     <script type="text/babel" src="reactor.js"></script>
 </body>
 
