--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <ul id="chat">
                   
                 </ul>
-
+             <!--Hello world-->
             </main>
         </div>
         <script type="text/javascript" src="./js/main.js"></script>
